# lpass-auth

./: pyproject.toml
lpass_auth/: cli.py
