[tool.poetry]
name = "lpass-auth"
version = "0.1.0"
description = "A command-line client for LastPass Authenticator."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pycryptodome = "^3.11.0"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
